# ttrpg

./: .gitignore  CLAUDE.md  Cargo.toml  VISION.md  WORKFLOW.md  shell.nix
.claude/commands/: architect.md  art.md  balance.md  designer.md  execute-sprint.md  narrative.md  planner.md  playtest.md  worldbuild.md
findings/: BAL-001-fronts-resolve-too-fast.md  BAL-002-faction-tension-identical.md  BUG-001-rumor-spread-broken.md  BUG-002-screenshot-black.md  BUG-003-tension-threshold-events-missing-from-simulate.md  DESIGN-001-watchtower-dead-end.md  DESIGN-003-scenario-frame.md  DESIGN-004-player-action-spec.md  INDEX.md  SESSIONS.md  UX-001-market-district-empty.md
src/: components.rs  data.rs  main.rs  resources.rs  simulate.rs  ui.rs
src/systems/: debug.rs  fronts.rs  interaction.rs  mod.rs  npc_ai.rs  player.rs  time.rs
tasks/: INDEX.md  TASK-001-implement-rumor-spread.md  TASK-002-front-pacing.md  TASK-003-differentiate-faction-tension.md  TASK-004-populate-market-district.md  TASK-005-watchtower-design-decision.md  TASK-006-fix-screenshot.md  TASK-007-double-front-countdowns.md  TASK-008-implement-front-chaining.md  TASK-009-write-successor-fronts.md  TASK-010-watchtower-scout-content.md  TASK-011-implement-scout-action.md
