[package]
name = "ttrpg"
version = "0.1.0"
edition = "2021"
default-run = "ttrpg"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "std",
    "async_executor",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_asset",
    "bevy_scene",
    "default_font",
    "png",
    "x11",
    "bevy_gizmos",
] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
rand = "0.8"

[[bin]]
name = "ttrpg"
path = "src/main.rs"

[[bin]]
name = "simulate"
path = "src/simulate.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
